<?xml version="1.0"?>
<package format="2">
  <name>ogmpp_prms</name>
  <version>0.0.1</version>
  <description>The ogmpp_prms package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>

  <license>GPL v2</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <export>
  </export>
</package>
